complete to develop layout1, layout2 css

--- a/jamjamapp/templates/layout2.html
+++ b/jamjamapp/templates/layout2.html
@@ -14,12 +14,12 @@
 <body>
     <!--사이드바 구현-->
     <div class="sidebar">
-        <img class="navbar-image" src="{% static 'jamjamapp/img/sidebar_des.png' %}">
+        <img class="navbar-sidebar" src="{% static 'jamjamapp/img/sidebar_des.png' %}">
         <h1><img class="navbar-brand" src="{% static 'jamjamapp/img/logo.png' %}"></h1>
         <class="navbar-second">
         <ul>
             <li>
-                <img src="{% static 'jamjamapp/img/jam_white.png' %}" weight="30" height="30">
+                <img class="sidebar-jam-count-icon" src="{% static 'jamjamapp/img/jam_white.png' %}" weight="30" height="30" style="">
                 <a class="sidebar-jam-count">2개임</a>
             </li>
             <li>
