--- a/jamjamapp/static/jamjamapp/css/layout1.css
+++ b/jamjamapp/static/jamjamapp/css/layout1.css
@@ -13,7 +13,7 @@ body {
 .navbar-base {
     position: relative;
     width: 100%;
-    max-width: 100%; 
+    max-width: 100%;
     height: 300px;
 }
 
@@ -99,7 +99,7 @@ li a:hover {
     float: left;
     display: inline-block;
     width: 40%;
-    margin-left: 80px;
+    margin-left: 180px;
     padding-top: 80px;
     padding-bottom: 50px;
     padding-left: 180px;
@@ -139,7 +139,7 @@ h2 {
 .daybox {
     display: inline-block;
     position: relative;
-    
+    margin-left: 200px;
 }
 
 p {
@@ -156,4 +156,6 @@ a {
 
 .add-plan {
     position: relative;
+    left: 230px;
+    margin-bottom: 100px;
 }
