--- a/jamjamapp/static/jamjamapp/css/layout2.css
+++ b/jamjamapp/static/jamjamapp/css/layout2.css
@@ -6,25 +6,20 @@
 }
 
 body {
-    background-color: #FFC4CE;
+    background-color: #FEE5E9;
     margin: 0px;
 }
 
-.navbar-image {
+.navbar-sidebar {
     position: relative;
-    width: auto;
-    max-width: 100%;
-    min-width: 1500px;
-    height: 100%;
-    top: 0;
+    height: 40%;
 }
 
 .navbar-brand {
-    position: relative;
-    width: 150px;
-    height: auto;
-    bottom: 1000px;
+    position: absolute;
+    width: 200px;
     left: 50px;
+    top: 15px;
 }
 
 ul {
@@ -33,35 +28,75 @@ ul {
 }
 
 li {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-}
-
-li a {
-    margin-left: 20px;
-    color: #ffffff;
-    font-size: 25px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    font-family: IM_Hyemin-Bold;
-}
-
-li a.current {
+    line-height: 3;
+    padding: 0 20px;
+    font-size: 20px;
     color: white;
 }
 
-li a.hover {
-    color: red;
+.sidebar-jam-count-icon {
+    position: absolute;
+    top: 140px;
+    left: 100px;
 }
 
-.navbar-first {
-    position:absolute;
-    top:40px;
-    left:2%;
+.sidebar-jam-count {
+    position: absolute;
+    top: 120px;
+    left: 140px;
 }
 
+.sidebar-link-logout {
+    position: absolute;
+    top: 180px;
+    left: 100px;
+}
+
+.sidebar-link-diary {
+    position: absolute;
+    top: 240px;
+    left: 100px;
+}
+
+.sidebar-link-community {
+    position: absolute;
+    top: 300px;
+    left: 100px;
+}
+
+.sidebar-link-course {
+    position: absolute;
+    top: 360px;
+    left: 100px;
+}
+
+.sidebar-link-jamshop {
+    position: absolute;
+    top: 420px;
+    left: 100px;
+}
+
+.sidebar-link-mypage {
+    position: absolute;
+    top: 480px;
+    left: 100px;
+}
+
+li a {
+    color: #ffffff;
+    font-size: 25px;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'IM_Hyemin-Bold';
+}
+
+li a:hover {
+    color: #ff7a91;
+}
+
+li a:hover {
+    color: #ff7a91;
+}
 
 /*scrollbar css*/
 
@@ -83,3 +118,4 @@ li a.hover {
 ::-webkit-scrollbar-thumb:hover {
     background: #FFC4CE;
 }
+
