complete to design community_write, edit

--- a/jamjamapp/templates/community/community.html
+++ b/jamjamapp/templates/community/community.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block contents %}
 <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
-<link rel="stylesheet" href="">
+<link href="{% static 'jamjamapp/css/community.css' %}" rel="stylesheet" />
 
 
 <div class="maincontainer">
