complete to design detail.html

--- a/jamjamapp/templates/community/detail.html
+++ b/jamjamapp/templates/community/detail.html
@@ -112,11 +112,19 @@
                             </div>
                         </div>
                         <!-- COMMENT 3 - END -->
-                    
                     </div>
                 </div>
             </div>
         </section>
 
+        <div class="panel">
+            <div class="panel-body">
+              <textarea class="form-control comment-input" rows="2" placeholder="댓글을 입력해주세요."></textarea>
+              <div class="mar-top clearfix">
+                <button class="btn btn-sm btn-primary pull-right comment-submit" type="submit"><i class="fa fa-pencil fa-fw"></i>등록</button>
+                <a class="btn btn-trans btn-icon fa fa-camera fa-3x add-tooltip comment-button" href="#"></a>
+              </div>
+            </div>
+          </div>
     </div>
 {% endblock %}
