--- a/jamjamapp/static/jamjamapp/css/community.css
+++ b/jamjamapp/static/jamjamapp/css/community.css
@@ -470,3 +470,52 @@ li .comment-btn {
     padding: 10px;
 }
 
+.input-comment {
+    width: 70%;
+    padding-right: 2%;
+    padding-top: 2%;
+    margin-left: 15%;
+    margin-bottom: 5%;
+    background-color: #ffb0bb;
+}
+
+.img-sm {
+    width: 46px;
+    height: 46px;
+}
+
+.panel {
+    background-color: #ffb0bb;
+    width: 50%;
+    margin-left: 20%;
+    border-radius: 0;
+    border: 0;
+    margin-bottom: 15px;
+}
+
+.panel-body {
+    padding-right: 50px;
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-bottom: 70px;
+}
+
+.comment-input {
+    width: 100%;
+    height: 200px;
+    color: #c56172;
+    font-size: 30px;
+    font-family: 'IM_Hyemin-Bold';
+    border: #fff;
+}
+
+.comment-submit {
+    width: 120px;
+    height: 60px;
+    padding: 5px 5px;
+    color: #c56172;
+    font-size: 25px;
+    font-family: 'IM_Hyemin-Bold';
+    background-color: #fff;
+    border: #fff;
+}
