--- a/jamjamapp/static/jamjamapp/css/mypage.css
+++ b/jamjamapp/static/jamjamapp/css/mypage.css
@@ -1,7 +1,7 @@
 .mypage-container {
     margin-top: 5%;
     display: grid;
-    grid-template-columns: repeat(6, 200px);
+    grid-template-columns: repeat(3, 20%);
     grid-column-gap: 10%;
     align-items: center;
     justify-content: center;
@@ -12,7 +12,6 @@
     background-color: #FEEFF2;
     height: 400px;
     text-align: center;
-    
 }
 
 .mypage-box > h1 {
