--- a/jamjamapp/templates/mypage/mypage.html
+++ b/jamjamapp/templates/mypage/mypage.html
@@ -7,15 +7,15 @@
 {% endblock %}
 {% block contents %}
 <div class='mypage-container'>
-    <div class='mypage-box' OnClick="location.href ='http://URL주소'" style="cursor:pointer">
+    <div class='mypage-box' OnClick="location.href ='#'" style="cursor:pointer">
         <br> <br> <br> <br> <br> <br>
         <h1>개인정보 수정</h1>
     </div>
-    <div class='mypage-box' OnClick="location.href ='http://URL주소'" style="cursor:pointer">
+    <div class='mypage-box' OnClick="location.href ='#'" style="cursor:pointer">
         <br> <br> <br> <br> <br> <br>
         <h1>커플연결 설정</h1>
     </div>
-    <div class='mypage-box' OnClick="location.href ='http://URL주소'" style="cursor:pointer">
+    <div class='mypage-box' OnClick="location.href ='#'" style="cursor:pointer">
         <br> <br> <br> <br> <br> <br>
         <h1>구매목록 확인</h1>
     </div>
