--- a/jamjamapp/templates/mypage/profile.html
+++ b/jamjamapp/templates/mypage/profile.html
@@ -11,8 +11,6 @@
     <div class="field">
         <h2>아이디</h2>
         <br>
-        <h2>비밀번호</h2>
-        <br>
         <h2>커뮤니티 닉네임</h2>
         <br>
         <h2>실명(선택)</h2>
@@ -22,10 +20,8 @@
     <div class="field-infor">
         <h2>gracekim527</h2>
         <br>
-        <h2>****0527</h2>
-        <br>
         <h2>으네</h2>
-        <a class="change-btn" href="#">변경</a>
+        <a class="change-btn" href="#">닉네임변경</a>
         <br>
         <h2>기므네</h2>
         <br>
