--- a/jamjamapp/templates/shop/theme.html
+++ b/jamjamapp/templates/shop/theme.html
@@ -6,7 +6,7 @@
 
 {% endblock %}
 {% block contents %}
-    <link href="{% static 'jamjamapp/css/community.css' %}" rel="stylesheet" />
+    <link href="{% static 'jamjamapp/css/shop.css' %}" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     
     <div class="shop-container">
