add diary.html, css and edit layout2.html, css

--- a/jamjamapp/static/jamjamapp/css/diary.css
+++ b/jamjamapp/static/jamjamapp/css/diary.css
@@ -49,3 +49,12 @@
     left: 90%;
     padding-bottom: 2%;
 }
+
+
+/* diary.html 디자인을 위해 추가,
+side navbar로 인해 margin-left 전체 먹여놓음 */
+
+.diary-body {
+    margin-left: 15%;
+    display: inline-block;
+}
