--- a/jamjamapp/templates/mypage/connection.html
+++ b/jamjamapp/templates/mypage/connection.html
@@ -10,8 +10,10 @@
     <br><br><br>
     <h1>연결된 연인이 없어요...!</h1>
     <h1>연결하러 가볼까요?</h1>
-    <div class="connection-box" OnClick="location.href ='#'" style="cursor:pointer">
-        <h2>인증번호 받기</h2>
+    <div class="connection-body">
+        <div class="connection-box" OnClick="location.href ='#'" style="cursor:pointer">
+            <h2>인증번호 받기</h2>
+        </div>
     </div>
 </div>
 {% endblock %}
