--- a/jamjamapp/static/jamjamapp/css/shop.css
+++ b/jamjamapp/static/jamjamapp/css/shop.css
@@ -1,9 +1,76 @@
-/* theme.html */
-.shop-container {
+/* theme.html, option.html */
+.theme-container {
     display: grid;
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 15% 10% 1fr 1fr 1fr 10%;
+    height: 920px;
+    grid-template-rows: 15% 10% 2fr 2fr 5% 20%;
+    grid-column-gap: 3%;
+    text-align: center;
 }
 
-.shop-item {
+.theme-container p {
+    font-size: 25pt;
+    margin :0;
+}
+
+.theme-image-1 {
+    grid-column : 3/4;
+    grid-row: 3/4;
     background-color: #FECDD6;
+}
+
+.theme-image-2 {
+    grid-column : 4/5;
+    grid-row: 3/4;
+    background-color: #FECDD6;
+}
+
+.theme-image-3 {
+    grid-column : 5/6;
+    grid-row: 3/4;
+    background-color: #FECDD6;
+}
+
+.item-explanation-1 {
+    grid-column : 3/4;
+    grid-row: 4/5;
+    background-color: white;
+}
+
+.item-explanation-2 {
+    grid-column : 4/5;
+    grid-row: 4/5;
+    background-color: white;
+}
+
+.item-explanation-3 {
+    grid-column : 5/6;
+    grid-row: 4/5;
+    background-color: white;
+}
+
+.item-pay-1 {
+    grid-column: 3/4;
+    grid-row: 5/6;
+    background-color: #FD99AA;
+}
+
+.item-pay-2 {
+    grid-column: 4/5;
+    grid-row: 5/6;
+    background-color: #FD99AA;
+}
+
+.item-pay-3 {
+    grid-column: 5/6;
+    grid-row: 5/6;
+    background-color: #FD99AA;
+}
+
+.shop-title{
+    grid-column : 3/6;
+    grid-row: 1/2;
+    text-align: center;
+    font-size: 70px;
+    color: #c56172;
 }
