--- a/jamjamapp/templates/shop/option.html
+++ b/jamjamapp/templates/shop/option.html
@@ -6,19 +6,21 @@
 
 {% endblock %}
 {% block contents %}
+<!--theme.html과 동일 -->
     <link href="{% static 'jamjamapp/css/shop.css' %}" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     
     <div class="theme-container">
-        <h1 class="shop-title">폰트/배경 샵</h1>
+        <h1 class="shop-title">기능 샵</h1>
         <div class="theme-image-1">
-            <h1>까까런 폰트</h1>
+            <br><br><br>
+            <h1>버킷리스트</h1>
         </div>
         <div class="theme-image-2">
-            <h1>카페24 폰트</h1>
+            <h1>준비 중입니다.</h1>
         </div>
         <div class="theme-image-3">
-            <h1>나눔고딕 폰트</h1>
+            <h1>준비 중입니다.</h1>
         </div>
         <div class="item-explanation-1">
             <h1>설명서</h1>
@@ -32,10 +34,10 @@
         <div class="item-pay-1" OnClick="location.href ='#'" style="cursor:pointer">
             <p>결제하기</p>
         </div>
-        <div class="item-pay-2" OnClick="location.href ='#'" style="cursor:pointer">
+        <div class="item-pay-2">
             <p>결제하기</p>
         </div>
-        <div class="item-pay-3" OnClick="location.href ='#'" style="cursor:pointer">
+        <div class="item-pay-3">
             <p>결제하기</p>
         </div>
     </div>
