--- a/jamjamapp/static/jamjamapp/css/layout2.css
+++ b/jamjamapp/static/jamjamapp/css/layout2.css
@@ -8,12 +8,33 @@
 body {
     font-family: 'IM_Hyemin-Bold';
     margin: 0;
+    background-color: #FEE5E9;
+    
+}
+
+/*scrollbar css*/
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+  /* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background: #ff99aa;
+}
+
+  /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #FFC4CE;
 }
 
 .wrapper {
-
     -ms-overflow-style: none; /* IE and Edge */
-
     scrollbar-width: none; /* Firefox */
 
 }
@@ -29,7 +50,7 @@ ul {
     margin: 0;
     padding: 0;
     width: 15%;
-    background-color: #FFC4CE;
+    background-color: #ff7a91;
     position: fixed;
     height: 100%;
     overflow: auto;
@@ -37,19 +58,19 @@ ul {
 
 li a {
     display: block;
-    color: #c56172;
+    color: white;
     padding: 8px 8px 8px 8px;
     text-decoration: none;
     font-size: 30px;
 }
 
 li a.active {
-    background-color: white;
+    background-color:#FFC4CE;
     color: #c56172;
 }
 
 li a:hover:not(.active) {
-    background-color: #ff7a91;
+    background-color: #FFC4CE;
     color: white;
 }
 
