--- a/jamjamapp/static/jamjamapp/css/diary.css
+++ b/jamjamapp/static/jamjamapp/css/diary.css
@@ -99,19 +99,20 @@ side navbar로 인해 margin-left 전체 먹여놓음 */
     color: #c56172;
 }
 
-.diary-delete-button {
+/* 수정 부분 시작 */
+
+.icon-button {
     display: inline-block;
-    width: 9%;
+    width: 7%;
     display: inline-block;
     background-color: #ff7a91;
     font-family : 'IM_Hyemin-Bold';
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     border: none;
 }
 
+/* 수정 부분 끝 */
 
 
 /* ======== Calendar ======== */
