--- a/jamjamapp/templates/diary.html
+++ b/jamjamapp/templates/diary.html
@@ -8,6 +8,7 @@
 {% block contents %}
     <link href="{% static 'jamjamapp/css/diary.css' %}" rel="stylesheet"/>
     
+    <!-- diary.html 전체 수정 -->
 
     <div class="diary-body">
         
@@ -46,17 +47,24 @@
             <div class="diary-input">
                 <textarea name="content" class="diary-input" cols="50" rows="2" placeholder="내용" style="height: 200px;"></textarea>
             </div>
-            <button class="save-btn" type="submit"
-            style="width: 100px;">
-                <a class="diary-save" href="#">저장</a></button>
-            <button class="diary-delete-button">
+            <!-- 수정 부분 시작-->
+            <button class="icon-button">
+              <a href="#" style="color: white;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-calendar-plus" viewBox="0 0 16 16">
+                  <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
+                  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+                </svg>
+              </a>
+            </button>
+            <button class="icon-button">
+              <a href="#" style="color: white;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                     <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                 </svg>
+              </a>
             </button>
-
-
+           <!-- 수정 부분 끝-->
         </div>
     </div>
 
