--- a/jamjamapp/templates/diary_edit.html
+++ b/jamjamapp/templates/diary_edit.html
@@ -6,27 +6,60 @@
 
 {% endblock %}
 {% block contents %}
-    <link href="{% static 'jamjamapp/css/diary.css' %}" rel="stylesheet" />
-    
+    <link href="{% static 'jamjamapp/css/diary.css' %}" rel="stylesheet"/>
 
     <div class="diary-body">
         
         <div class="diary-container">
-           <h2 class="diary-date">8월 1일</h2>
-           <div class="diary-input">
-                <textarea name="content" class="diary-input" cols="25" rows="10" placeholder="내용" style="height: 600px;"></textarea>
+            
+            <div class="my-calendar clearfix">
+                <div class="clicked-date">
+                  <div class="cal-day"></div>
+                  <div class="cal-date"></div>
+                </div>
+                <div class="calendar-box">
+                  <div class="ctr-box clearfix">
+                    <button type="button" title="prev" class="btn-cal prev">
+                    </button>
+                    <span class="cal-month"></span>
+                    <span class="cal-year"></span>
+                    <button type="button" title="next" class="btn-cal next">
+                    </button>
+                  </div>
+                  <table class="cal-table">
+                    <thead>
+                      <tr>
+                        <th>S</th>
+                        <th>M</th>
+                        <th>T</th>
+                        <th>W</th>
+                        <th>T</th>
+                        <th>F</th>
+                        <th>S</th>
+                      </tr>
+                    </thead>
+                    <tbody class="cal-body"></tbody>
+                  </table>
+                </div>
+              </div>
+            <div class="diary-input">
+                <textarea name="content" class="diary-input" cols="50" rows="2" placeholder="내용" style="height: 200px;"></textarea>
             </div>
             <button class="save-btn" type="submit"
-            style="width: 100px; justify-content: center; align-items: center;">
-            <a class="diary-save" href="#">저장</a></button>
-            <button class="diary-delete-button">
+            style="width: 100px;">
+                <a class="diary-save" href="#">저장</a></button>
+            <!-- 수정 부분 시작-->
+            <button class="icon-button">
+                <a href="#" style="color: white;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                     <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
                 </svg>
+                </a>
             </button>
+            <!-- 수정 부분 끝-->
         </div>
-        
-
     </div>
+
+    <script type="text/javascript" src="../static/jamjamapp/js/calender.js"></script>
 {% endblock %}
