--- a/jamjamapp/templates/layout1.html
+++ b/jamjamapp/templates/layout1.html
@@ -36,7 +36,7 @@
                 <li>
                     <a class="navbar-link-mypage" href="">마이페이지</a>
                 </li>
-                <li>
+                <li class="side-jam-count">
                     <img src="{% static 'jamjamapp/img/jam_white.png' %}" weight="30" height="30">
                     <a class="navbar-jam-count">2개임</a>
                 </li>
