--- a/jamjamapp/templates/layout2.html
+++ b/jamjamapp/templates/layout2.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
-    <!-- layout2 아예 싹 다 고침 -->
+
+    <!-- layout2.html 전체 수정 -->
+    
     <div class="wrapper">
         <ul>
             <a href="#"><img class="navbar-brand" src="{% static 'jamjamapp/img/logo.png' %}"></a>
@@ -24,7 +26,32 @@
             <li><a class="active" href="#">커뮤니티</a></li>
             <li><a href="#">코스</a></li>
              <li><a href="#">잼샵</a></li>
-            <li><a href="#t">마이페이지</a></li>
+            <li><a href="#">마이페이지</a></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <li>
+                <img src="{% static 'jamjamapp/img/jam_white.png' %}" weight="30" height="30" style="display: inline-block;">
+                <a class="navbar-jam-count" style="display: inline-block;">2개임</a>
+            </li>
+            <li>
+                <a class="navbar-link-logout" href="">로그아웃</a>  
         </ul>
     </div>
     </body>
