--- a/jamjamapp/templates/course.html
+++ b/jamjamapp/templates/course.html
@@ -1,119 +1,144 @@
-{% extends 'layout1.html' %} 
+{% extends 'layout2.html' %} 
 {% load static %}
 
-<!-- community와 거의 동일한 페이지 -->
+
 {% block head %}
 <title>너와 나의 달달한 소스, JamJam</title>
 
 {% endblock %}
 {% block contents %}
-<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet" />
-<link href="{% static 'jamjamapp/css/community.css' %}" rel="stylesheet" />
+  <link href="{% static 'jamjamapp/css/course.css' %}" rel="stylesheet" />
+
+<div class="course-body">
+
+    <button class="search-btn" type="submit">
+    <a class="course-search" href="#">지역 검색</a></button>
 
 
-<div class="maincontainer">
-    <h2 style="text-align: center; font-size: 60px;">100일 기념</h2>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="commu-dropdown">
-        <button class="commu-dd-btn">필터</button>
-        <div class="commu-dd-content">
-            <a href="#">전체</a>
-            <a href="#">추천순</a>
-            <a href="#">조회수순</a>
-            <a href="#">댓글순</a>
+     <div class="course-filter">
+        <select>
+            <option selected>전체</option>
+            <option>추천순</option>
+            <option>조회수순</option>
+            <option>댓글순</option>
+        </select>
+      </div>
+
+
+      <div class="card">
+        <img class="card-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Seoul_Gyeongbok-gung-3.jpg/414px-Seoul_Gyeongbok-gung-3.jpg" alt="Avatar" style="width:100%">
+        <div class="container">
+            <h4 class="course-name"><b>경복궁</b></h4>
+            <p class="course-info">사랑하는 연인과 함께 경복궁 야간개장 관람은 좋은 추억을 선물해줍니다. 미리 예매가 필요하고 입장시간도 확인해보세요!</p>
+            
+            <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+              <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+              <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+            <p class="course-count">3</p>
+            <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+              <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+            </svg>
+            <p class="course-count">3</p>
+
         </div>
     </div>
-    <!-- search starts here -->
-    <div class="search">
-	    <form action='/search' method='get'>
-		    <input autocomplete='off' name='q' placeholder="Search me!"/>
-        <!-- svg icon -->
-		    <button class="button">
-			    <svg viewBox="0 0 56.966 56.966">
-	                <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23
-	                s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92
-	                c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17
-	                s-17-7.626-17-17S14.61,6,23.984,6z" />
-                </svg>
-		    </button> <!-- icon -->
-        </form>
-    </div><!-- search ends here -->
 
-    <br>
-    <br>
-    <br>
+    <div class="card">
+      <img class="card-img" src="https://t1.daumcdn.net/cfile/tistory/992A94405F926D2C0C" alt="Avatar" style="width:100%">
+      <div class="container">
+          <h4 class="course-name"><b>익선동</b></h4>
+          <p class="course-info">골목 사이마다 특유의 멋이 있어 어느 골목길을 가도 건질 수 있는 인생사진! 전통 가옥의 매력을 느낄 수 있는 데이트 장소!</p> 
+          
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+          <p class="course-count">3</p>
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+            <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+          </svg>
+          <p class="course-count">3</p>
 
-    <hr class="commu-hr">
+        </div>
+  </div>
 
-    <table class="commu-table">
-        <thead>
-        <tr>
-            <th>No</th>
-            <th>제목</th>
-            <th>작성자</th>
-            <th>작성일</th>
-            <th>조회수</th>
-            <th>추천수</th>
-            <th>댓글수</th>
-        </tr>
-        </thead>
-            <tbody>
-            <th>1</th>
-            <td>고민이에요</td>
-            <td>누구누구</td>
-            <td>21.01.01.</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-        </tbody>
-        <tbody>
-            <th>2</th>
-            <td>고민이에요</td>
-            <td>누구누구</td>
-            <td>21.01.01.</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-            </tbody>
-        <tbody>
-            <th>3</th>
-            <td>고민이에요</td>
-            <td>누구누구</td>
-            <td>21.01.01.</td>
-            <td>1</td>
-            <td>1</td>
-            <td>1</td>
-        </tbody>
-    </table>
+  <div class="card">
+      <img class="card-img" src="https://img1.daumcdn.net/thumb/R720x0.q80/?scode=mtistory2&fname=http%3A%2F%2Fcfile27.uf.tistory.com%2Fimage%2F994B3A445CD0E2052267EA" alt="Avatar" style="width:100%">
+      <div class="container">
+          <h4 class="course-name"><b>한강공원</b></h4>
+          <p class="course-info">널찍한 산책로는 물론 야경도 여유롭게 감상할 수 있는 한강공원. 분위기 잡기 좋은 데이트 장소~</p> 
+          
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+          <p class="course-count">3</p>
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+            <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+          </svg>
+          <p class="course-count">3</p>
 
-    <nav class="commu-page">
-        <ul class="commu-page-ul">
-          <li class="commu-page-li">
-            <a href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="commu-page-li"><a href="#">1</a></li>
-          <li class="commu-page-li"><a href="#">2</a></li>
-          <li class="commu-page-li"><a href="#">3</a></li>
-          <li class="commu-page-li"><a href="#">4</a></li>
-          <li class="commu-page-li"><a href="#">5</a></li>
-          <li class="commu-page-li">
-            <a href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+        </div>
+  </div>
 
+  <div class="card">
+      <img class="card-img" src="https://mblogthumb-phinf.pstatic.net/20160302_74/gr22nade_1456894355635ELByf_JPEG/1.JPG?type=w2" alt="Avatar" style="width:100%">
+      <div class="container">
+          <h4 class="course-name"><b>망원시장</b></h4>
+          <p class="course-info">맛있는 닭강정과 파전을 즐기고 후식으로 아이스크림 츄러스까지 먹으면 저절로 행복해지는 망원시장!</p> 
+          
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+          <p class="course-count">3</p>
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+            <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+          </svg>
+          <p class="course-count">3</p>
 
-    <hr class="commu-hr">
-    <br>
-    <br>
-    <br>
+        </div>
+  </div>
+
+  <div class="card">
+      <img class="card-img" src="https://mblogthumb-phinf.pstatic.net/20160410_28/qp0542_1460291357367zyPQ5_JPEG/IMG_7703.JPG?type=w800" alt="Avatar" style="width:100%">
+      <div class="container">
+          <h4 class="course-name"><b>낙산공원</b></h4>
+          <p class="course-info">커플들의 성지인 대학로에 있는 낙산공원! 귀여운 벽화와 아기자기한 카페들이 옹기종기 모여있는 야경 맛집!</p> 
+          
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+          <p class="course-count">3</p>
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+            <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+          </svg>
+          <p class="course-count">3</p>
+
+        </div>
+  </div>
+
+  <div class="card">
+      <img class="card-img" src="https://mblogthumb-phinf.pstatic.net/MjAxNzA2MDZfMTA1/MDAxNDk2NzU0NTY5NDQx.HzXBIxlefpVodvfrLlnwl2QboRLBVQOeMhWBJ1b2dc8g.yGNbt5n9bGXXGGdCEMAqqdHU0sbDI8zFAg3-GGm9BHgg.JPEG.kimbeagles/IMG_0721.jpg?type=w800" alt="Avatar" style="width:100%">
+      <div class="container">
+          <h4 class="course-name"><b>연남동</b></h4>
+          <p class="course-info">캔들과 스티커, 악세서리 등을 판매하는 소품샵들이 모여있는 골목길. 분위기 좋은 맛집도 많아서 굿굿!</p> 
+          
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+            <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+          <p class="course-count">3</p>
+          <svg class="course-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+            <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
+          </svg>
+          <p class="course-count">3</p>
+
+        </div>
+  </div>
+
+</div>
 
 {% endblock %}
