--- a/jamjamapp/static/jamjamapp/css/login.css
+++ b/jamjamapp/static/jamjamapp/css/login.css
@@ -1,3 +1,5 @@
+/* login.html */
+
 @font-face {
     font-family: 'IM_Hyemin-Bold';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
@@ -28,7 +30,8 @@ body {
     right: 10%;
     padding: 50px 70px 50px 70px; 
     display: grid;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    font-family: 'IM_Hyemin-Bold'
 }
 
 .login-body {
@@ -43,6 +46,8 @@ body {
 .login-content {
     position: relative;
     margin: 10px 0;
+    width: 400px;
+    height: 60px;
 }
 
 h1 {
@@ -57,10 +62,81 @@ h2 {
 
 .login-header h1 {
     text-align: left;
+    font-size: 50px;
 }
 
+.loginInput {
+    all: unset;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    bottom: 10px;
+}
 
-.login-box h1 {
-    font-size: 50px;
+.spanOverlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: pink;
+    opacity: 0.2;
+}
+
+.login-findpw-con {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.login-btn {
+    all: unset;
+    width: 180px;
+    height: 70px;
+    border-radius: 12px;
+    text-align: center;
+    background-color: pink;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.login-btn:hover {
+    background-color: #fd99aa;
+    color: white;
+}
+
+.findpw {
+    float: right;
+}
+
+/* findpw.html */
+
+.find-box {
+    width:25%;
+    height: 600px;
+    background-color: white;
+    border-radius: 40px;
+    position: absolute;
+    right: 20%;
+    padding: 50px 70px 50px 70px; 
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    color: #c56172;
+}
+
+.findpw {
+    font-family: 'IM_Hyemin-Bold';
+}
+
+.form-group {
+    font-size: 25px;
+    margin-bottom: 10%;
+    padding: 10% 10%;
+}
+
+.card-footer {
+    padding: 10% 10%;
 }
 
