--- a/jamjamapp/templates/login/login.html
+++ b/jamjamapp/templates/login/login.html
@@ -24,18 +24,22 @@
             </div>
             <div class="login-body">
               <div class="login-content">
-                <input type="login-textForm" placeholder="아이디">
-                <label class="login--form">아이디</label>
+                <label class="loginLabel">이메일주소</label>
+                <input type="text" required class="loginInput">
+                <span class="spanOverlay"></span>
               </div>
               <div class="login-content">
-                <input type="login-textForm" placeholder="비밀번호">
-                <label class="login--form">비밀번호</label>
-              </div>
-              <button type="register-btn">로그인</button>
-              <a href="#">아이디찾기</a>
-              <a href="#">비밀번호찾기</a>
-            </div>
-        </div>
+                <label class="loginLabel">비밀번호</label>
+                <input type="text" required class="loginInput">
 
+                <span class="spanOverlay"></span>
+                <a class="findpw" href="#">비밀번호찾기</a>
+              </div>
+            </div>
+            <div class="login-findpw-con">
+              <button class="login-btn">로그인</button>
+            </div>
+
+        </div>
 </body>
 </html>
