--- a/jamjamapp/static/jamjamapp/css/course.css
+++ b/jamjamapp/static/jamjamapp/css/course.css
@@ -470,3 +470,51 @@ select::-ms-expand {
     background-color: #FEE5E9;
     border-top: 3px dashed #c56172;
 }
+
+/* popup 버튼과 창 추가 */
+
+.region-btn {
+    display: inline-block;
+    width: 5%;
+    background-color: #ff7a91;
+    font-family : 'IM_Hyemin-Bold';
+    font-size: 30px;
+    padding: 10px 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.region-btn:hover {
+    color: white;
+}
+
+#popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .7);
+    z-index: 1;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+  }
+  
+  #popup.hide {
+    display: none;
+  }
+  
+  #popup.multiple-filter {
+    backdrop-filter: blur(4px) grayscale(90%);
+    -webkit-backdrop-filter: blur(4px) grayscale(90%);
+  }
+  
+  #popup .content {
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .3);
+  }
