--- a/jamjamapp/static/jamjamapp/css/shop.css
+++ b/jamjamapp/static/jamjamapp/css/shop.css
@@ -237,3 +237,50 @@
     background-color: #FFDCE2;
 }
 
+/* pay.html */
+.pay-container {
+    display: grid;
+    height: 920px;
+    grid-template-columns: 15% 10% 10% 5% 30% 5% 30% ;
+    grid-template-rows: 15% 10% 1fr 1fr 20% 20%;
+}
+
+.pay-container h1{
+    font-size: 50px;
+    color: #c56172;
+    text-align:center;
+    grid-column: 4/7;
+    grid-row: 2/3;
+}
+
+.pay-container h2 {
+    font-size: 20px;
+    grid-column: 5/6;
+    grid-row:3/4;
+    text-align: center;
+    justify-content: center;
+}
+
+.pay-container h3 {
+    font-size: 25px;
+    grid-column: 5/6;
+    grid-row: 4/5;
+    text-align: center;
+}
+
+.img-pay {
+    grid-column: 5/6;
+    grid-row: 5/6;
+    width: 50%;
+    margin: 0 auto;
+    cursor:pointer;
+}
+
+.img-jam {
+    grid-column: 5/6;
+    grid-row: 3/4;
+    width: 30%;
+    margin: 0 auto;
+    cursor:pointer;
+    margin-top: 10%;
+}
