--- a/jamjamapp/templates/shop/completepay.html
+++ b/jamjamapp/templates/shop/completepay.html
@@ -10,11 +10,11 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     
 <div class="pay-container">
-    <h1>신용카드 및 간편결제로 결제</h1>
+    <h1>결제가 완료되었습니다!!</h1>
     <img class="img-jam" src="{% static 'jamjamapp/img/original_jam.png' %}">
     <h3>아이템 : 10 Jam / 결제금액 : 3,000 원</h3>
     <div class="pay-box" OnClick="location.href ='#'">
-        <h2>결제</h2>
+        <h2>메인으로</h2>
     </div>
 </div>
 {% endblock %}
